--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
       </ul>
     </nav>
       <ul class="flex">
-        <li><a href="mailto:info@devstudio.com" class="address1 link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
+        <li>
+          <svg class="address-icon" width="16" height="12">
+          <use href="./images/icons.svg#envelope"></use>
+                </svg>
+          <a href="mailto:info@devstudio.com" class="address1 link">
+          info@devstudio.com</a></li>
+        <li>
+          <svg class="address-icon" width="10" height="16">
+            <use href="./images/icons.svg#smartphone"></use>
+                  </svg>
+                  <a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
       </ul>
   </div>
       </header>
@@ -47,18 +56,30 @@
       <div class="container">
       <ul class="list-item">
         <li class="lielement">
+          <svg class="icon-list" height="70px" width="70px">
+            <use href="./images/icons.svg#satellite"></use>
+          </svg>
           <h3 class="text2">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="text3">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li class="lielement">
+          <svg class="icon-list" height="70px" width="70px">
+            <use href="./images/icons.svg#clock"></use>
+          </svg>
           <h3 class="text2">ПУНКТУАЛЬНІСТЬ</h3>
           <p class="text3">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li class="lielement">
+          <svg class="icon-list" height="70px" width="70px">
+            <use href="./images/icons.svg#diagram"></use>
+          </svg>
           <h3 class="text2">ПЛАНУВАННЯ</h3>
           <p class="text3">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li class="lielement">
+          <svg class="icon-list" height="70px" width="70px">
+            <use href="./images/icons.svg#astronaut"></use>
+          </svg>
           <h3 class="text2">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
           <p class="text3">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
@@ -92,6 +113,40 @@
       <div class="text">
       <h3 class="member">Ігор Дем'яненко</h3>
     <p class="memberpos">Product Designer</p>
+    <ul class="list-icons">
+      <li>
+    <a href="#instagram" class="ellipse">
+      <svg class="social-links">
+        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+        <use class="social-icon" href="./images/icons.svg#instagram"></use>
+      </svg>
+    </a>
+  </li>
+  <li>
+    <a href="#twitter" class="ellipse">
+      <svg class="social-links">
+        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+        <use class="social-icon" href="./images/icons.svg#twitter"></use>
+      </svg>
+    </a>
+    </li>
+    <li>
+    <a href="#facebook" class="ellipse">
+      <svg class="social-links">
+        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+        <use class="social-icon" href="./images/icons.svg#facebook"></use>
+      </svg>
+    </a>
+  </li>
+  <li>
+    <a href="#linkedin" class="ellipse">
+      <svg class="social-links">
+        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+        <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+      </svg>
+    </a>
+  </li>
+  </ul>
     </div>
   </li>
       <li class="box">
@@ -99,6 +154,40 @@
       <div class="text">
       <h3 class="member">Ольга Рєпіна</h3>
       <p class="memberpos">Frontend Developer</p>
+      <ul class="list-icons">
+        <li>
+      <a href="#instagram" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#twitter" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+        </svg>
+      </a>
+      </li>
+      <li>
+      <a href="#facebook" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#linkedin" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+        </svg>
+      </a>
+    </li>
+    </ul>
       </div>
       </li>
     <li class="box">
@@ -106,6 +195,40 @@
       <div class="text">
       <h3 class="member">Микола Тарасов</h3>
       <p class="memberpos">Marketing</p>
+      <ul class="list-icons">
+        <li>
+      <a href="#instagram" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#twitter" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+        </svg>
+      </a>
+      </li>
+      <li>
+      <a href="#facebook" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#linkedin" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+        </svg>
+      </a>
+    </li>
+    </ul>
       </div>
       </li>
     <li class="box">
@@ -113,6 +236,40 @@
         <div class="text">
         <h3 class="member">Михайло Єрмаков</h3>
       <p class="memberpos">UI Designer</p>
+      <ul class="list-icons">
+        <li>
+      <a href="#instagram" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#twitter" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+        </svg>
+      </a>
+      </li>
+      <li>
+      <a href="#facebook" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="#linkedin" class="ellipse">
+        <svg class="social-links">
+          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+        </svg>
+      </a>
+    </li>
+    </ul>
       </div>
       </li>
   </ul>
