--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <ul class="flex">
         <li>
           <svg class="address-icon" width="16" height="12">
-          <use href="./images/icons.svg#envelope"></use>
-                </svg>
+            <use href="./images/icons.svg#envelope"></use>
+          </svg>
           <a href="mailto:info@devstudio.com" class="address1 link">
           info@devstudio.com</a></li>
         <li>
           <svg class="address-icon" width="10" height="16">
             <use href="./images/icons.svg#smartphone"></use>
-                  </svg>
-                  <a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
+          </svg>
+            <a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
       </ul>
   </div>
       </header>
@@ -275,6 +275,44 @@
   </ul>
 </div>
   </section>
+  <!--Постійні клієнти-->
+  <section class="section">
+<h1 class="clients">Постійні клієнти</h1>
+<div class="container">
+<ul>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#yaco"></use>
+  </svg>
+</li>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#company"></use>
+  </svg>
+</li>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#company-1"></use>
+  </svg>
+</li>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#foster"></use>
+  </svg>
+</li>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#brand"></use>
+  </svg>
+</li>
+  <li class="list-icon3">
+    <svg class="icon-list2" width="106px" height="60px">
+    <use href="./images/icons.svg#company-2"></use>
+  </svg>
+</li>
+</ul>
+</div>
+  </section>
 </main>
   <!--Bottom-->
   <footer class="footer">
@@ -289,6 +327,42 @@
   <li class="liitem3"><a href="tel:+380961111111" class="link addpos2">+38 096 111 11 11</a></li>
 </ul>
 </address>
+<!--Приєднуйтесь-->
+  <h2 class="footerhead">Приєднуйтесь</h2>
+  <ul class="list-icons">
+    <li>
+  <a href="#instagram" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#instagram"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a href="#twitter" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#twitter"></use>
+    </svg>
+  </a>
+  </li>
+  <li>
+  <a href="#facebook" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#facebook"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a href="#linkedin" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#linkedin"></use>
+    </svg>
+  </a>
+</li>
+</ul>
 </div>
 </footer>
 </body>
