--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,19 @@
         <li><a href="#" class="link contacts">Контакти</a></li>
       </ul>
     </nav>
-      <ul class="flex">
-        <li><a href="mailto:info@devstudio.com" class="address1 link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
-      </ul>
+    <ul class="flex">
+      <li>
+        <svg class="address-icon" width="16" height="12">
+          <use href="./images/icons.svg#envelope"></use>
+        </svg>
+        <a href="mailto:info@devstudio.com" class="address1 link">
+        info@devstudio.com</a></li>
+      <li>
+        <svg class="address-icon" width="10" height="16">
+          <use href="./images/icons.svg#smartphone"></use>
+        </svg>
+          <a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
+    </ul>
   </div>
       </header>
     <main>
@@ -136,6 +145,42 @@
     <li class="liitem3"><a href="tel:+380961111111" class="link addpos2">+38 096 111 11 11</a></li>
   </ul>
   </address>
+  <!--Приєднуйтесь-->
+  <h2 class="footerhead">Приєднуйтесь</h2>
+  <ul class="list-icons">
+    <li>
+  <a href="#instagram" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#instagram"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a href="#twitter" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#twitter"></use>
+    </svg>
+  </a>
+  </li>
+  <li>
+  <a href="#facebook" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#facebook"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a href="#linkedin" class="ellipse">
+    <svg class="social-links">
+      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
+      <use class="social-icon1" href="./images/icons.svg#linkedin"></use>
+    </svg>
+  </a>
+</li>
+</ul>
   </div>
   </footer>
 </body>
