--- a/index.html
+++ b/index.html
@@ -316,18 +316,21 @@
 </main>
   <!--Bottom-->
   <footer class="footer">
-    <div class="container">
+    <section class="container">
+    <div>
 <!--Logo-->
 <a href="./index.html" class="logo logo-1"><span class="web">Web</span><span class="stud1">Studio</span></a>
 <!--Address-->
 <address class="address">
-<ul class="list-item3">
+<ul>
   <li class="liitem3"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="link addpos1">м. Київ, пр-т Лесі Українки, 26</a></li>
   <li class="liitem3"><a href="mailto:info@devstudio.com" class="link addpos2">info@devstudio.com</a></li>
   <li class="liitem3"><a href="tel:+380961111111" class="link addpos2">+38 096 111 11 11</a></li>
 </ul>
 </address>
+</div>
 <!--Приєднуйтесь-->
+<div>
   <h2 class="footerhead">Приєднуйтесь</h2>
   <ul class="list-icons">
     <li>
@@ -364,6 +367,8 @@
 </li>
 </ul>
 </div>
+</div>
+</section>
 </footer>
 </body>
 </html>
