--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Custom styles -->
-      <link rel="stylesheet" href="./css/styles.css">
       <link rel="stylesheet" href="./css/modern-normalize.css">
+      <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
       <header class="topline">
         <div class="container flex">
     <!-- Navigation -->
     <nav class="flex">
-      <a href="./index.html" class="logo lg1"><span class="web">Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
       <ul class="flex">
         <li><a href="./index.html" class="link studio current">Студія</a></li>
         <li><a href="./portfolio.html" class="link portfolio">Портфоліо</a></li>
@@ -29,16 +29,16 @@
     </nav>
       <ul class="flex">
         <li>
-          <svg class="address-icon" width="16" height="12">
+          <a href="mailto:info@devstudio.com" class="address1 link"><svg class="address-icon" width="16" height="12">
             <use href="./images/icons.svg#envelope"></use>
           </svg>
-          <a href="mailto:info@devstudio.com" class="address1 link">
-          info@devstudio.com</a></li>
+          info@devstudio.com</a>
+        </li>
         <li>
-          <svg class="address-icon" width="10" height="16">
-            <use href="./images/icons.svg#smartphone"></use>
-          </svg>
-            <a href="tel:+380961111111" class="address2 link">+38 096 111 11 11</a></li>
+          <a href="tel:+380961111111" class="address1 link"> <svg class="address-icon" width="10" height="16">
+              <use href="./images/icons.svg#smartphone"></use>
+          </svg>+38 096 111 11 11</a>
+          </li>
       </ul>
   </div>
       </header>
@@ -56,30 +56,38 @@
       <div class="container">
       <ul class="list-item">
         <li class="lielement">
+          <div>
           <svg class="icon-list" height="70px" width="70px">
             <use href="./images/icons.svg#satellite"></use>
           </svg>
+        </div>
           <h3 class="text2">УВАГА ДО ДЕТАЛЕЙ</h3>
           <p class="text3">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li class="lielement">
+          <div>
           <svg class="icon-list" height="70px" width="70px">
             <use href="./images/icons.svg#clock"></use>
           </svg>
+        </div>
           <h3 class="text2">ПУНКТУАЛЬНІСТЬ</h3>
           <p class="text3">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li class="lielement">
+          <div>
           <svg class="icon-list" height="70px" width="70px">
             <use href="./images/icons.svg#diagram"></use>
           </svg>
+        </div>
           <h3 class="text2">ПЛАНУВАННЯ</h3>
           <p class="text3">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li class="lielement">
+          <div class="div1">
           <svg class="icon-list" height="70px" width="70px">
             <use href="./images/icons.svg#astronaut"></use>
           </svg>
+        </div>
           <h3 class="text2">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
           <p class="text3">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
@@ -117,32 +125,28 @@
       <li>
     <a href="#instagram" class="ellipse">
       <svg class="social-links">
-        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-        <use class="social-icon" href="./images/icons.svg#instagram"></use>
+        <use class href="./images/icons.svg#instagram"></use>
       </svg>
     </a>
   </li>
   <li>
     <a href="#twitter" class="ellipse">
       <svg class="social-links">
-        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-        <use class="social-icon" href="./images/icons.svg#twitter"></use>
+        <use href="./images/icons.svg#twitter"></use>
       </svg>
     </a>
     </li>
     <li>
     <a href="#facebook" class="ellipse">
       <svg class="social-links">
-        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-        <use class="social-icon" href="./images/icons.svg#facebook"></use>
+        <use href="./images/icons.svg#facebook"></use>
       </svg>
     </a>
   </li>
   <li>
     <a href="#linkedin" class="ellipse">
       <svg class="social-links">
-        <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-        <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+        <use href="./images/icons.svg#linkedin"></use>
       </svg>
     </a>
   </li>
@@ -158,32 +162,28 @@
         <li>
       <a href="#instagram" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+          <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+          <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+          <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+          <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
     </li>
@@ -199,32 +199,28 @@
         <li>
       <a href="#instagram" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+          <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+          <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+          <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+          <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
     </li>
@@ -240,32 +236,28 @@
         <li>
       <a href="#instagram" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#instagram"></use>
+          <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#twitter" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#twitter"></use>
+          <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
       <a href="#facebook" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#facebook"></use>
+          <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
       <a href="#linkedin" class="ellipse">
         <svg class="social-links">
-          <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-          <use class="social-icon" href="./images/icons.svg#linkedin"></use>
+          <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
     </li>
@@ -276,39 +268,51 @@
 </div>
   </section>
   <!--Постійні клієнти-->
-  <section class="section">
-<h1 class="clients">Постійні клієнти</h1>
-<div class="container">
+  <section class="section clients">
+  <div class="container">
+<h2>Постійні клієнти</h2>
 <ul>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#yaco"></use>
   </svg>
+  </a>
 </li>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#company"></use>
   </svg>
+  </a>
 </li>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#company-1"></use>
   </svg>
+  </a>
 </li>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#foster"></use>
   </svg>
+  </a>
 </li>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#brand"></use>
   </svg>
+  </a>
 </li>
-  <li class="list-icon3">
-    <svg class="icon-list2" width="106px" height="60px">
+  <li>
+    <a href="">
+    <svg>
     <use href="./images/icons.svg#company-2"></use>
   </svg>
+  </a>
 </li>
 </ul>
 </div>
@@ -334,34 +338,30 @@
   <h2 class="footerhead">Приєднуйтесь</h2>
   <ul class="list-icons">
     <li>
-  <a href="#instagram" class="ellipse">
+  <a href="#instagram" class="ellipse1">
     <svg class="social-links">
-      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-      <use class="social-icon1" href="./images/icons.svg#instagram"></use>
+      <use href="./images/icons.svg#instagram"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a href="#twitter" class="ellipse">
+  <a href="#twitter" class="ellipse1">
     <svg class="social-links">
-      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-      <use class="social-icon1" href="./images/icons.svg#twitter"></use>
+      <use href="./images/icons.svg#twitter"></use>
     </svg>
   </a>
   </li>
   <li>
-  <a href="#facebook" class="ellipse">
+  <a href="#facebook" class="ellipse1">
     <svg class="social-links">
-      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-      <use class="social-icon1" href="./images/icons.svg#facebook"></use>
+      <use href="./images/icons.svg#facebook"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a href="#linkedin" class="ellipse">
+  <a href="#linkedin" class="ellipse1">
     <svg class="social-links">
-      <ellipse rx="50%" ry="50%" cx="50%" cy="50%"></ellipse>
-      <use class="social-icon1" href="./images/icons.svg#linkedin"></use>
+      <use href="./images/icons.svg#linkedin"></use>
     </svg>
   </a>
 </li>
