--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Custom styles -->
-      <link rel="stylesheet" href="./css/styles.css">
-      <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
       <header class="topline">
@@ -55,9 +55,10 @@
         <li class="boxbutton"><button type="button" class="button2">Маркетинг</button></li>
     </ul>
     <!-- Posters -->
-      <ul class="list-item4">
+      <ul class="posters">
         <li class="boxes">
-          <a><img src="./images/img_8.jpg" alt="Технокряк" width="370" height="294">
+          <a href="">
+            <img src="./images/img_8.jpg" alt="Технокряк" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Технокряк</h2>
             <p class="description">Веб-сайт</p>
@@ -65,7 +66,8 @@
     </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_9.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+          <a href="">
+            <img src="./images/img_9.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
       <div class="boxtext">
       <h2 class="projname">Постер New Orlean vs Golden Star</h2>
       <p class="description">Дизайн</p>
@@ -73,7 +75,8 @@
     </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_10.jpg" alt="Ресторан Seafood" width="370" height="294">
+          <a href="">
+            <img src="./images/img_10.jpg" alt="Ресторан Seafood" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Ресторан Seafood</h2>
       <p class="description">Додаток</p>
@@ -81,7 +84,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_11.jpg" alt="Проєкт Prime" width="370" height="294">
+          <a href="">
+            <img src="./images/img_11.jpg" alt="Проєкт Prime" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Проєкт Prime</h2>
       <p class="description">Маркетинг</p>
@@ -89,7 +93,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_12.jpg" alt="Проєкт Boxes" width="370" height="294">
+          <a href="">
+            <img src="./images/img_12.jpg" alt="Проєкт Boxes" width="370" height="294">
             <div class="boxtext">
               <h2 class="projname">Проєкт Boxes</h2>
       <p class="description">Додаток</p>
@@ -97,7 +102,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_13.jpg" alt="Inspiration has no Borders" width="370" height="294">
+          <a href="">
+            <img src="./images/img_13.jpg" alt="Inspiration has no Borders" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Inspiration has no Borders</h2>
       <p class="description">Веб-сайт</p>
@@ -105,7 +111,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_14.jpg" alt="Видання Limited Edition" width="370" height="294">
+          <a href="">
+            <img src="./images/img_14.jpg" alt="Видання Limited Edition" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Видання Limited Edition</h2>
       <p class="description">Дизайн</p>
@@ -113,7 +120,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_15.jpg" alt="Проєкт LAB" width="370" height="294">
+          <a href="">
+            <img src="./images/img_15.jpg" alt="Проєкт LAB" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Проєкт LAB</h2>
       <p class="description">Маркетинг</p>
@@ -121,7 +129,8 @@
   </a>
     </li>
         <li class="boxes">
-          <a><img src="./images/img_16.jpg" alt="Growing Business" width="370" height="294">
+          <a href="">
+            <img src="./images/img_16.jpg" alt="Growing Business" width="370" height="294">
       <div class="boxtext">
             <h2 class="projname">Growing Business</h2>
       <p class="description">Додаток</p>
