--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
   
-  
+  <!-- Head -->
     <head>
     <!-- Meta -->
       <meta charset="utf-8">
@@ -16,26 +16,27 @@
       <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-      <header class="topline">
-        <div class="container flex">
+      <header>
+    <!-- Header -->    
+        <div class="container">
     <!-- Navigation -->
-    <nav class="flex">
+    <nav>
       <a href="./index.html" class="logo"><span class="web">Web</span>Studio</a>
-      <ul class="flex">
-        <li><a href="./index.html" class="link studio current">Студія</a></li>
-        <li><a href="./portfolio.html" class="link portfolio">Портфоліо</a></li>
-        <li><a href="#" class=" link contacts">Контакти</a></li>
+      <ul>
+        <li><a href="./index.html" class="current">Студія</a></li>
+        <li><a href="./portfolio.html">Портфоліо</a></li>
+        <li><a href="#">Контакти</a></li>
       </ul>
     </nav>
-      <ul class="flex">
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com" class="address1 link"><svg class="address-icon" width="16" height="12">
+          <a href="mailto:info@devstudio.com"><svg width="16" height="12">
             <use href="./images/icons.svg#envelope"></use>
           </svg>
           info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="address1 link"> <svg class="address-icon" width="10" height="16">
+          <a href="tel:+380961111111"> <svg width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
           </svg>+38 096 111 11 11</a>
           </li>
@@ -44,68 +45,68 @@
       </header>
     <!-- Шапка -->
     <main>
-    <section class="bg">
+      <!-- Зміст -->
+    <section class="hat">
       <div class="container">
-    <h1 class="header">Ефективні рішення<br> для вашого бізнесу</h1>
-    <button type="button" class="button4">Замовити послугу</button>
+    <h1>Ефективні рішення<br> для вашого бізнесу</h1>
+    <button type="button">Замовити послугу</button>
   </div>
   </section>
-    <!-- Зміст -->
     <!-- Особливості -->
-    <section  class="section">
+    <section  class="section special">
       <div class="container">
-      <ul class="list-item">
-        <li class="lielement">
+      <ul>
+        <li>
           <div>
-          <svg class="icon-list" height="70px" width="70px">
+          <svg>
             <use href="./images/icons.svg#satellite"></use>
           </svg>
         </div>
-          <h3 class="text2">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="text3">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
-        <li class="lielement">
+        <li>
           <div>
-          <svg class="icon-list" height="70px" width="70px">
+          <svg>
             <use href="./images/icons.svg#clock"></use>
           </svg>
         </div>
-          <h3 class="text2">ПУНКТУАЛЬНІСТЬ</h3>
-          <p class="text3">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p>Завдання організації, особливо рамки і місце н3авчання кадрів тягне у себе.</p>
         </li>
-        <li class="lielement">
+        <li>
           <div>
-          <svg class="icon-list" height="70px" width="70px">
+          <svg>
             <use href="./images/icons.svg#diagram"></use>
           </svg>
         </div>
-          <h3 class="text2">ПЛАНУВАННЯ</h3>
-          <p class="text3">Так само консультація з широким активом значною мірою зумовлює.</p>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
-        <li class="lielement">
-          <div class="div1">
-          <svg class="icon-list" height="70px" width="70px">
+        <li>
+          <div id="div">
+          <svg>
             <use href="./images/icons.svg#astronaut"></use>
           </svg>
         </div>
-          <h3 class="text2">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p class="text3">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </div>
     </section>
 <!-- Чим ми займаємося -->
-<section class="section section1">
+<section class="section tasks">
   <div class="container">
 <h2 class="title">Чим ми займаємося</h2>
-<ul class="list-item1">
-  <li class="lielement2">
+<ul>
+  <li>
     <img src="images/img_1.jpg" alt="coding on ipad" width="370" height="294" class="img-1">
   </li>
-  <li class="lielement2">
+  <li>
     <img src="images/img_2.jpg" alt="coding on mac" width="370" height="294" class="img-2">
   </li>
-  <li class="lielement2">
+  <li>
     <img src="images/img_3.jpg" alt="tablet gamma" width="370" height="294" class="img-3">
   </li>
 </ul>
@@ -115,37 +116,37 @@
 <section class="command section">
   <div class="container">
   <h2 class="title">Наша команда</h2>
-  <ul class="list-item2">
-      <li class="box">
+  <ul>
+      <li>
       <img src="images/img_4.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-      <div class="text">
-      <h3 class="member">Ігор Дем'яненко</h3>
-    <p class="memberpos">Product Designer</p>
+      <div>
+      <h3>Ігор Дем'яненко</h3>
+    <p>Product Designer</p>
     <ul class="list-icons">
       <li>
-    <a href="#instagram" class="ellipse">
-      <svg class="social-links">
+    <a href="#instagram">
+      <svg>
         <use class href="./images/icons.svg#instagram"></use>
       </svg>
     </a>
   </li>
   <li>
-    <a href="#twitter" class="ellipse">
-      <svg class="social-links">
+    <a href="#twitter">
+      <svg>
         <use href="./images/icons.svg#twitter"></use>
       </svg>
     </a>
     </li>
     <li>
-    <a href="#facebook" class="ellipse">
-      <svg class="social-links">
+    <a href="#facebook">
+      <svg>
         <use href="./images/icons.svg#facebook"></use>
       </svg>
     </a>
   </li>
   <li>
-    <a href="#linkedin" class="ellipse">
-      <svg class="social-links">
+    <a href="#linkedin">
+      <svg>
         <use href="./images/icons.svg#linkedin"></use>
       </svg>
     </a>
@@ -153,36 +154,36 @@
   </ul>
     </div>
   </li>
-      <li class="box">
+      <li>
       <img src="images/img_5.jpg" alt="Ольга Рєпіна" width="270" height="260">
-      <div class="text">
-      <h3 class="member">Ольга Рєпіна</h3>
-      <p class="memberpos">Frontend Developer</p>
+      <div>
+      <h3>Ольга Рєпіна</h3>
+      <p>Frontend Developer</p>
       <ul class="list-icons">
         <li>
-      <a href="#instagram" class="ellipse">
-        <svg class="social-links">
+      <a href="#instagram">
+        <svg>
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#twitter" class="ellipse">
-        <svg class="social-links">
+      <a href="#twitter">
+        <svg>
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
-      <a href="#facebook" class="ellipse">
-        <svg class="social-links">
+      <a href="#facebook">
+        <svg>
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#linkedin" class="ellipse">
-        <svg class="social-links">
+      <a href="#linkedin">
+        <svg>
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -190,36 +191,36 @@
     </ul>
       </div>
       </li>
-    <li class="box">
+    <li>
       <img src="images/img_6.jpg" alt="Микола Тарасов" width="270" height="260">
-      <div class="text">
-      <h3 class="member">Микола Тарасов</h3>
-      <p class="memberpos">Marketing</p>
+      <div>
+      <h3>Микола Тарасов</h3>
+      <p>Marketing</p>
       <ul class="list-icons">
         <li>
-      <a href="#instagram" class="ellipse">
-        <svg class="social-links">
+      <a href="#instagram">
+        <svg>
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#twitter" class="ellipse">
-        <svg class="social-links">
+      <a href="#twitter">
+        <svg>
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
-      <a href="#facebook" class="ellipse">
-        <svg class="social-links">
+      <a href="#facebook">
+        <svg>
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#linkedin" class="ellipse">
-        <svg class="social-links">
+      <a href="#linkedin">
+        <svg>
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -227,36 +228,36 @@
     </ul>
       </div>
       </li>
-    <li class="box">
+    <li>
         <img src="images/img_7.jpg" alt="Михайло Єрмаков" width="270" height="260">
-        <div class="text">
-        <h3 class="member">Михайло Єрмаков</h3>
-      <p class="memberpos">UI Designer</p>
+        <div>
+        <h3>Михайло Єрмаков</h3>
+      <p>UI Designer</p>
       <ul class="list-icons">
         <li>
-      <a href="#instagram" class="ellipse">
-        <svg class="social-links">
+      <a href="#instagram">
+        <svg>
           <use href="./images/icons.svg#instagram"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#twitter" class="ellipse">
-        <svg class="social-links">
+      <a href="#twitter">
+        <svg>
           <use href="./images/icons.svg#twitter"></use>
         </svg>
       </a>
       </li>
       <li>
-      <a href="#facebook" class="ellipse">
-        <svg class="social-links">
+      <a href="#facebook">
+        <svg>
           <use href="./images/icons.svg#facebook"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a href="#linkedin" class="ellipse">
-        <svg class="social-links">
+      <a href="#linkedin">
+        <svg>
           <use href="./images/icons.svg#linkedin"></use>
         </svg>
       </a>
@@ -319,48 +320,48 @@
   </section>
 </main>
   <!--Bottom-->
-  <footer class="footer">
+  <footer>
     <section class="container">
     <div>
 <!--Logo-->
-<a href="./index.html" class="logo logo-1"><span class="web">Web</span><span class="stud1">Studio</span></a>
+<a href="./index.html" class="logo"><span class="web">Web</span><span class="stud1">Studio</span></a>
 <!--Address-->
-<address class="address">
+<address>
 <ul>
-  <li class="liitem3"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="link addpos1">м. Київ, пр-т Лесі Українки, 26</a></li>
-  <li class="liitem3"><a href="mailto:info@devstudio.com" class="link addpos2">info@devstudio.com</a></li>
-  <li class="liitem3"><a href="tel:+380961111111" class="link addpos2">+38 096 111 11 11</a></li>
+  <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="link addpos1">м. Київ, пр-т Лесі Українки, 26</a></li>
+  <li><a href="mailto:info@devstudio.com" class="link addpos2">info@devstudio.com</a></li>
+  <li><a href="tel:+380961111111" class="link addpos2">+38 096 111 11 11</a></li>
 </ul>
 </address>
 </div>
 <!--Приєднуйтесь-->
 <div>
-  <h2 class="footerhead">Приєднуйтесь</h2>
+  <h2>Приєднуйтесь</h2>
   <ul class="list-icons">
     <li>
-  <a href="#instagram" class="ellipse1">
-    <svg class="social-links">
+  <a href="#instagram">
+    <svg>
       <use href="./images/icons.svg#instagram"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a href="#twitter" class="ellipse1">
-    <svg class="social-links">
+  <a href="#twitter">
+    <svg>
       <use href="./images/icons.svg#twitter"></use>
     </svg>
   </a>
   </li>
   <li>
-  <a href="#facebook" class="ellipse1">
-    <svg class="social-links">
+  <a href="#facebook">
+    <svg>
       <use href="./images/icons.svg#facebook"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a href="#linkedin" class="ellipse1">
-    <svg class="social-links">
+  <a href="#linkedin">
+    <svg>
       <use href="./images/icons.svg#linkedin"></use>
     </svg>
   </a>
